<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#F8FAFC"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Wybierz produkty:"
        android:textSize="20dp"
        android:textColor="#000000"
        />

    <Spinner android:id="@+id/computer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"/>

    <CheckBox android:id="@+id/checkboxForMouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addMouseToShoppingCart" />

    <Spinner android:id="@+id/mouse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"/>

    <CheckBox android:id="@+id/checkboxForKeyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addKeyboardToShoppingCart" />

    <Spinner android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"/>

    <CheckBox android:id="@+id/checkboxForWebcam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addCameraToShoppingCart" />

    <Spinner android:id="@+id/webcam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Placeholder"
        android:textSize="14dp"
        android:textColor="#000000" />
    </LinearLayout>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/Name"
        android:background="@drawable/custom_edittext_background"
        android:minHeight="48dp"
        android:padding="5dp"
        android:layout_marginTop="10dp"
/>

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/PhonNumber"
        android:digits="0123456789+"
        android:background="@drawable/custom_edittext_background"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        />


    <Button android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PlaceOrder"
        android:background="@drawable/rounded_button"
        android:textColor="#F8FAFC"
        android:textAllCaps="false"
        android:layout_marginTop="15dp"/>
</LinearLayout>